<resources>
    <string name="app_name">TestMediaPlayer</string>
    <string name="search_hint">Search melodies</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="empty_list">"No Results"</string>
    <string-array name="filters">
        <item>Title</item>
        <item>Artist</item>
        <item>Album</item>
    </string-array>
    <string-array name="screens">
        <item>ALL SONGS</item>
        <item>FROM FOLDER</item>
    </string-array>
    <string name="all_songs">ALL SONGS</string>
    <string name="from_folder">FROM FOLDER</string>
    <string name="search_filter">Search filter</string>
    <string name="sort_filter">Sorting filter</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string-array name="audio_extensions">
        <item>mp3</item>
        <item>3gp</item>
        <item>mp4</item>
        <item>m4a</item>
        <item>aac</item>
        <item>flac</item>
        <item>mid</item>
        <item>xmf</item>
        <item>mxmf</item>
        <item>ota</item>
        <item>imy</item>
        <item>ogg</item>
        <item>wav</item>
        <item>mkv</item>
    </string-array>
    <string name="choose_folder">Choose folder</string>
    <color name="back">#3d4140</color>
    <color name="purple_light">#ffffff</color>
    <color name="purple_dark">#353838</color>
</resources>
